# web3-idea

./: .gitignore  README.md
back/: Cargo.toml
back/migrations/: 001_create_tables.sql  001_create_users_table.sql
back/src/: config.rs  main.rs  utils.rs
back/src/controllers/: health_controller.rs  market_controller.rs  mod.rs
back/src/db/: idea_repo.rs  mod.rs
back/src/db/migrations/: 20240320_add_user_category.sql
back/src/handlers/: solana.rs
back/src/models/: idea.rs  user.rs
back/src/routes/: ideas.rs  mod.rs  staking.rs  votes.rs
back/src/services/: mod.rs  solana_service.rs
front/: package.json  tailwind.config.js  tsconfig.json
front/src/app/: globals.css  layout.tsx  page.tsx
front/src/app/dashboard/: layout.tsx  page.tsx
front/src/app/ideas/: page.tsx
front/src/app/portfolio/: page.tsx
front/src/components/: connect-wallet-button.tsx  feature-grid.tsx  feature-section.tsx  footer.tsx  gradient-card.tsx  logo-cloud.tsx  navbar.tsx  shiny-button.tsx  spotlight-effect.tsx  stat-card.tsx  testimonial-card.tsx  testimonial-section.tsx
front/src/components/background/: space-background.tsx
front/src/components/dashboard/: dashboard-header.tsx  portfolio-chart.tsx  recent-transactions.tsx  sidebar.tsx  trending-ideas.tsx
front/src/components/ideas/: create-idea-button.tsx  create-idea-modal.tsx  idea-chart.tsx  idea-modal.tsx  ideas-filters.tsx  ideas-grid.tsx  ideas-header.tsx  use-ideas-store.tsx
front/src/components/ui/: dialog.tsx
front/src/store/: wallet-store.ts
front/src/types/: phantom.d.ts
(+1 files in other folders)
